# holocron

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PHASE1_VERIFICATION_REPORT.md  README.md  RULES.md  agents.config.json  app.config.cjs  app.config.js  app.json  babel.config.cjs  biome.json  components.json  eas.json  eslint.config.js  exa-vs-jina-deepresearch-comparison-20260306.md  global.css  karat-interview-prep-guide.md  lefthook.yml  linkedin-post-research-game.md  metro.config.cjs  metro.config.js  package-lock.json  package.json  pnpm-lock.yaml  storybookwork.md  tailwind.config.js  test-audit-categorization.md  test-audit.txt  tsconfig.json  vitest.config.ts  vitest.setup.ts
.claude/: otel-langfuse-headers.sh  settings.json  settings.json.new
.github/: PULL_REQUEST_TEMPLATE.md
.husky/: pre-commit
.ios-build/: setup-state.json
.pi/: task-orchestrator.yaml  task-runner.yaml  taskplane-config.json  taskplane.json
.rnstorybook/: index.tsx  main.ts  preview.tsx  setup.ts  storybook.requires.d.ts
.spec/: CLIENT-MIGRATION-PLAN.md  DELIBERATION-LOG-epic3.md  DELIBERATION-LOG.md  MIGRATION-ANALYSIS.md  MIGRATION-SUMMARY.md  PLAN-NOTEBOOK-epic3.md  PLAN-NOTEBOOK-epic5.md  PLAN-NOTEBOOK-epic6.md  research-loop-improvement-plan.md
.tmp/: id-mappings.json  validation-report.json
app/: +not-found.tsx  _layout.tsx  articles.tsx  index.tsx  settings.tsx  storybook.tsx  subscriptions.tsx  toolbelt.tsx
cli/: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
cli/holocron_cli/: __init__.py  __main__.py  cli.py
cli/holocron_cli/commands/: __init__.py  browse.py  get_doc.py  list_docs.py  search.py  stats.py
cli/holocron_cli/core/: __init__.py  config.py  convex_client.py
cli/holocron_cli/utils/: __init__.py  formatters.py
cli/tests/: __init__.py
cli/tests/integration/: __init__.py
cli/tests/unit/: __init__.py  test_cli.py  test_convex_client.py  test_formatters.py
components/: AnswerWithSourcesCard.tsx  ArticleCard.stories.tsx  ArticleCard.tsx  ArticleCardSkeleton.stories.tsx  ArticleCardSkeleton.tsx  AssimilationCard.tsx  CLAUDE.md  CategoryBadge.stories.tsx  CategoryBadge.tsx  ChatBubble.stories.tsx  ChatBubble.tsx  ChatInput.stories.tsx  ChatInput.tsx  CommandBadge.stories.tsx  CommandBadge.tsx  ConversationActionMenu.stories.tsx  ConversationActionMenu.tsx  ConversationRow.stories.tsx  ConversationRow.tsx  DrawerContent.stories.tsx  DrawerContent.tsx  DrawerHeader.stories.tsx  DrawerHeader.tsx  EmptyState.stories.tsx  EmptyState.tsx  FilterChip.tsx  HelloWorld.stories.tsx  HelloWorld.tsx  IterationCard.stories.tsx  IterationCard.tsx  NavigationTooltip.tsx  ProgressIndicator.stories.tsx  ProgressIndicator.tsx  ResearchProgress.stories.tsx  ResearchProgress.tsx  ResearchProgressWithConvex.tsx  ResultCard.stories.tsx  ResultCard.tsx  SearchInput.stories.tsx  SearchInput.tsx  (+9 more)
convex/: convex.config.ts  crons.ts  documents.ts  http.ts  notifications.ts  schema.ts  subscriptions.ts  taskCrons.ts  whatsNew.ts
design/: manifest.yaml
docs/: CONVEX-SETUP.md  LAY-OF-THE-LAND.md  MIGRATION.md  README.md  research-mode-decision.md  research-strategies.md
examples/: whats-new-report-2026-04-10.md
holocron-general-mcp.old/: README.md  package.json  pnpm-lock.yaml
holocron-mcp/: MCP-SETUP.md  README.md  biome.json  package.json  start-mcp.sh  tsconfig.json  tsup.config.ts
holocron-mcp.backup/: README.md  package.json  tsconfig.json
hooks/: taskRealtimeRegistry.ts  use-agent-activity.test.ts  use-agent-activity.ts  use-auto-dismiss-captions.ts  use-chat-history.ts  use-chat-realtime.ts  use-notifications.ts  use-push-notifications.ts  use-send-message.ts  use-subscription-feed.ts  use-theme.ts  use-voice-result-bridge.ts  use-voice-session-state.ts  use-voice-session.ts  use-whats-new-feed.ts  useChatSend.ts  useConversations.ts  useDebounce.ts  (+10 more)
python/: .gitignore  README.md  holocron_client.py  pyproject.toml  requirements.txt  setup.py
python/convex_client/: __init__.py  api.py  client.py
python/examples/: basic_usage.py
python/tests/: __init__.py  test_convex_api.py  test_convex_client.py
(+1768 files in other folders)
